# claude-plan-bridge

./: .gitignore  Cargo.toml  FORMATv2.md  LICENSE  PLAN.md  PLAN_ARCHIVE.md  README.md  SPEC.md  coverage.json
.claude/: settings.json
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
coverage-html/: index.html
coverage-html/coverage/home/runner/work/claude-plan-bridge/claude-plan-bridge/src/: archive.rs.html  ast.rs.html  audit.rs.html  backlog.rs.html  baseline.rs.html  canonicalize.rs.html  drop_mapping.rs.html  hook.rs.html  init.rs.html  io_util.rs.html  lock.rs.html  main.rs.html  mcp.rs.html  parser.rs.html  phase_seq.rs.html  phase_template.rs.html  reconcile.rs.html  resume.rs.html  serializer.rs.html  state.rs.html  test_utils.rs.html  today.rs.html  writeback.rs.html
src/: archive.rs  ast.rs  audit.rs  backlog.rs  baseline.rs  canonicalize.rs  drop_mapping.rs  hook.rs  init.rs  io_util.rs  lib.rs  lock.rs  main.rs  mcp.rs  parser.rs  phase_seq.rs  phase_template.rs  reconcile.rs  resume.rs  serializer.rs  state.rs  test_utils.rs  today.rs  writeback.rs
tests/: activation_lifecycle.rs  next_phase_cli.rs  next_phase_mcp_e2e.rs  phase_marker_e2e.rs  phase_new_cli.rs  phase_scaffold_cli.rs  planning_loop_cli.rs  portable_hooks_cli.rs  promote_into_cli.rs  quicksight_dogfood.rs
tests/fixtures/: basic.md  v2_mixed.md
