[package]
name = "claude-plan-bridge"
version = "1.1.2"
edition = "2024"
license = "MIT"
description = "Bridges Claude Code's TaskCreate task list to a canonical PLAN.md so the two systems stop fighting. Provides hooks, an MCP server, and an archive sweeper."
readme = "README.md"
repository = "https://github.com/chotchki/claude-plan-bridge"
keywords = ["claude-code", "planning", "markdown", "hooks", "mcp"]
categories = ["development-tools", "command-line-utilities"]

# Keep the library's import path as `plan_bridge` so existing `use
# plan_bridge::...` in main.rs / tests doesn't churn. The crate published
# to crates.io is still `claude-plan-bridge`; this only affects the Rust
# import path within the same package.
[lib]
name = "plan_bridge"
path = "src/lib.rs"

# MSRV: 1.89 (std::fs::File::try_lock / unlock stabilization, Phase 41.1).
[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
winnow = "1.0.3"
